resources/templates-jinja/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$3
  name: rgate
spec:
  rules:
  - host: rgate
    http:
      paths:
      - backend:
          service:
            name: recieve
            port:
              number: 8080
        path: /api/recieve
        pathType: Prefix
      - backend:
          service:
            name: buy
            port:
              number: 8080
        path: /api/buy
        pathType: Prefix
      - backend:
          service:
            name: payments
            port:
              number: 8080
        path: /api/payments
        pathType: Prefix
      - backend:
          service:
            name: orders
            port:
              number: 8080
        path: /api/orders
        pathType: Prefix
